--- a/MyApp/MyApp/MyApp.csproj
+++ b/MyApp/MyApp/MyApp.csproj
@@ -7,4 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="3.0.0.446417" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="Views.cs" />
+  </ItemGroup>
 </Project>
