--- a/DemoViews/DemoViews.iOS/DemoViews.iOS.csproj
+++ b/DemoViews/DemoViews.iOS/DemoViews.iOS.csproj
@@ -158,5 +158,6 @@
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\facebook.png" />
+    <BundleResource Include="Resources\user.png" />
   </ItemGroup>
 </Project>
